[BUG] SearchFilterBar fix bugs:
* delete button(X mark) is placing a bit upward.
* border comes up when delete button clicked.buttons
* input search bar's height increases when focused.
* height is too low against GUI guideline.
* button is placing a bit upward.
* Cancel button has wired stuff on the edge

CAM https://cam.sprc.samsung.pl/browse/LINUXTWUI-1255

--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.forms.textinput.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.forms.textinput.less
@@ -88,9 +88,9 @@ textarea.ui-input-text {
 	}
 	.ui-btn-icon-notext.ui-input-clear {
 		width: 36 * @unit_base;
-		height: 33 * @unit_base;
+		height: 34 * @unit_base;
 		.ui-btn-inner {
-			padding: 9 * @unit_base_textinput
+			padding: 14 * @unit_base_textinput
 					16 * @unit_base_textinput
 					9 * @unit_base_textinput
 					16 * @unit_base_textinput;
@@ -134,8 +134,9 @@ textarea.ui-input-text {
 		position: relative;
 
 		background-color: @color_searchbar_bg;
+		border: 1px solid @color_searchbar_bg;
 		.ui-input-text {
-			height: 64 * @unit_base_textinput;
+			height: 68 * @unit_base_textinput;
 			padding : 0px;
 
 			margin-right : 38 * @unit_base;
@@ -146,7 +147,8 @@ textarea.ui-input-text {
 		}
 
 		.ui-focus {
-			background-color: @color_list_bg;
+			background-color: @color_searchbar_border_focus;
+			border: none;
 		}
 
 		.ui-image-search {
@@ -179,15 +181,14 @@ textarea.ui-input-text {
 
 		top	: 4 * @unit_base;
 		right : 0 * @unit_base;
-		height : 66 * @unit_base_textinput;
+		height : 72 * @unit_base_textinput;
 		margin-right : 16 * @unit_base_textinput;
 
 		vertical-align: middle;
 		padding : 0px;
+		border: 1px solid none;
 
-		border-color : none;
-
-		width : 136 * @unit_base_textinput;
+	  width : 136 * @unit_base_textinput;
 		-webkit-transition: all 400ms linear;
 		transition: all 400ms linear;
 
@@ -238,6 +239,7 @@ textarea.ui-input-text {
 
 	.ui-focus {
 		border: 1px solid @color_searchbar_border_focus;
+		height: 72 * @unit_base_textinput;
 		background-color: @color_list_bg;
 		box-sizing: border-box;
 	}
